# Nocturne

./: README.md  com.jeffser.Nocturne.yml  meson.build
.github/: FUNDING.yml
data/: com.jeffser.Nocturne.desktop.in  com.jeffser.Nocturne.gschema.xml  com.jeffser.Nocturne.metainfo.xml.in
po/: es.po  nocturne.pot
src/: __init__.py  actions.py  constants.py  main.py  meson.build  nocturne.gresource.xml  nocturne.in  preferences.py  style.css  window.py
src/integrations/: __init__.py  base.py  jellyfin.py  local.py  models.py  navidrome.py  secret.py
src/navidrome/: __init__.py  local.py  models.py  navidrome.py
src/ui/: preferences.blp  shortcuts-dialog.blp  window.blp
src/ui/album/: button.blp  row.blp
src/ui/artist/: button.blp  page.blp  row.blp
src/ui/containers/: carousel.blp  wrapbox.blp
src/ui/lyrics/: dialog.blp
src/ui/pages/: albums.blp  albums_all.blp  artists.blp  home.blp  login.blp  playlists.blp  radios.blp  sidebar.blp  songs.blp
src/ui/playing/: control_page.blp  footer.blp  lyrics_page.blp  popout_window.blp  queue_page.blp
src/ui/playlist/: button.blp  row.blp  selector_row.blp
src/ui/song/: row.blp  small_row.blp
src/widgets/: __init__.py  meson.build
src/widgets/album/: button.py  page.py  row.py
src/widgets/artist/: button.py  page.py  row.py
src/widgets/containers/: __init__.py  carousel.py  context.py  meson.build  wrapbox.py
src/widgets/lyrics/: __init__.py  dialog.py  helpers.py  meson.build
src/widgets/pages/: __init__.py  albums.py  albums_all.py  artists.py  home.py  login.py  meson.build  playlists.py  radios.py  setup.py  songs.py
src/widgets/playing/: __init__.py  control_page.py  footer.py  lyrics_page.py  meson.build  player.py  popout_window.py  queue_page.py
src/widgets/playlist/: button.py  dialog.py  page.py  row.py  selector_row.py
src/widgets/song/: __init__.py  meson.build  row.py  small_row.py
stubs/: gettext.pyi
stubs/gi/: __init__.pyi  repository.pyi
