moduledir = get_option('prefix') / get_option('datadir') / meson.project_name() / 'nocturne' / 'widgets' / 'pages'

widgets = [
  '__init__.py',
  'home.py',
  'login.py',
  'artists.py',
  'playlists.py',
  'songs.py',
  'albums.py',
  'albums_all.py',
]

install_data(widgets, install_dir: moduledir)